force-app/main/default/objects/Tier_Tasks__mdt/Tier_Tasks__mdt.object-meta.xml
<CustomObject>
    <description>Used for task creation based on Campaign records.

-- Created as part of CR: CR00030177 | BRM IT Form: IT-REQ-1250</description>
    <label>Tier Tasks</label>
    <pluralLabel>Tier Tasks</pluralLabel>
</CustomObject>