force-app/main/default/objects/Tier_Tasks__mdt/fields/Dummy_Region__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Region__c</fullName>
    <description>Dummy values of tier category&apos;s related region that do not have any set of task records will be mentioned in this field and this will be used in flow for comparison.

Records with this should be removed/altered if tasks records for those categories are created.</description>
    <label>Dummy Region</label>
    <length>25</length>
    <type>Text</type>
</CustomField>