force-app/main/default/objects/Tier_Tasks__mdt/fields/Dummy_Tier_Category__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Tier_Category__c</fullName>
    <description>Dummy values of tier category that do not have any set of task records will be mentioned in this field and this will be used in flow for comparison.

Records with this should be removed/altered if tasks records for those categories are created.</description>
    <label>Dummy Tier Category</label>
    <length>25</length>
    <type>Text</type>
</CustomField>