force-app/main/default/objects/Tier_Tasks__mdt/fields/Task_Owner__c.field-meta.xml
<CustomField>
    <fullName>Task_Owner__c</fullName>
    <label>Task Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>