force-app/main/default/objects/Tier_Tasks__mdt/fields/Tier_Category__c.field-meta.xml
<CustomField>
    <fullName>Tier_Category__c</fullName>
    <label>Tier Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>