force-app/main/default/objects/Tier_Tasks__mdt/fields/Tier_Type__c.field-meta.xml
<CustomField>
    <fullName>Tier_Type__c</fullName>
    <label>Tier Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Face to Face</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>